--- a/views/admin.jade
+++ b/views/admin.jade
@@ -2,6 +2,7 @@ extends layout
 
 block content
 	section#main
+		h1=title
 		p The Last #{attempts.length} question attempts are shown in the table below.<br>(green=correct, red=incorrect)
 		table#admin-attempts
 			thead
