--- a/views/test.jade
+++ b/views/test.jade
@@ -3,15 +3,17 @@ extends layout
 block content
 	section#main
 		h1= title
-		form#selectAnswer(name="response", method="post")
-			p.category Category: #{question.Category}
-			p.question #{question.Question}
-			div.answer-block
-				for text, i in question.Answers
-					div.answer
-						input(id='answer#{order[i]}', type="radio", name="answer", value='#{order[i]}')
-						| #{question.Answers[order[i]]}
-			p Select answer and press submit.
-			input(type='hidden', name='number', value='#{number}')
-			input(type='hidden', name='order', value='#{order}')
-			input(type="submit", value="Submit")
+		div.test
+			div
+				form#selectAnswer(name="response", method="post")
+					h2.category Category: #{question.Category}
+					p.question #{question.Question}
+					div.answer-block
+						for text, i in question.Answers
+							div.answer
+								input(id='answer#{order[i]}', type="radio", name="answer", value='#{order[i]}')
+								| #{question.Answers[order[i]]}
+					p Select answer and press submit.
+					input(type='hidden', name='number', value='#{number}')
+					input(type='hidden', name='order', value='#{order}')
+					input(type="submit", value="Submit")
