--- a/views/index.jade
+++ b/views/index.jade
@@ -2,6 +2,11 @@ extends layout
 
 block content
 	section#main
-		h1= title
-		p Welcome to driver's practice tests. You will be asked a series of questions randomly drawn from a bank of #{nQuestions} created to test your driving knowledge.
-		p This test will prepare you for the driver's exam.
+		div.home-page
+			h1= title
+			p Welcome to driver's practice tests. You will be asked a series of questions randomly drawn from a bank of #{nQuestions} created to test your driving knowledge.
+			p This test will:
+			ul
+				li Prepare you for the driver's exam.
+				li Improve your driving skills.
+				li Renew your knowledge of road rules.
