--- a/views/about.jade
+++ b/views/about.jade
@@ -4,3 +4,10 @@ block content
 	section#main
 		h1= title
 		p The practice tests offered on this site will prepare you with the knowledge to pass your permit test put you on the road to becoming a safe driver.
+		p This application was built as a demo Nodejs application for ASU GIT 590.
+		p The major components are:
+		ul
+			li Node.js server
+			li Express scaffolding
+			li MongoDB NoSQL database
+			li Jade template system	
