--- a/views/footer.jade
+++ b/views/footer.jade
@@ -1,6 +1,5 @@
 footer
-  hr
   div.footer-left
     p &copy; 2015 Joe Pruskowski
   div.footer-right
-    p this is footer right
+    p Demo NodeJs Application
