--- a/views/header.jade
+++ b/views/header.jade
@@ -1,7 +1,7 @@
 header
-  div#header
-    div.header-left
-      img(src='images/joeLogo.png')
-    div.header-right
-      p Demo Practice Tests
-  //hr
+	div#header
+		div.header-left
+			a(href='/')
+				img(src='images/joeLogo.png' alt = "Joe Pruskowski logo")
+		div.header-right
+			p Demo Practice Tests
