--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -41,6 +41,9 @@ header div.header-right {
 	text-align: right;
 	vertical-align: top;
 }
+footer {
+	border-top: 2px groove #ccc;
+}
 footer div.footer-left, footer div.footer-right {
 	width: 48%;
 	display: inline-block;
@@ -49,8 +52,8 @@ footer div.footer-left, footer div.footer-right {
 nav {
 	text-align: center;
 	background-color: #ccc;
-	padding-bottom: .5em;
-	border-bottom: solid 1px yellow;
+	border-bottom: 2px groove #ccc;
+	border-top: 2px groove #ccc;
 }
 nav ul {
 	list-style: none;
@@ -60,11 +63,14 @@ nav ul {
 nav ul li {
 	display: inline-block;
 	padding: 0 5%;
-	margin: 0;
+	margin: .5em 0;
 }
 nav ul li a {
 	color: yellow;
 	text-decoration: none;
+}
+nav ul li a:hover {
+	text-decoration: underline;
 }
 a {
   color: #00B7FF;
@@ -123,7 +129,7 @@ div.answer input {
 /*********************************************************
  * Styling for admin view.
  *********************************************************/
- section#main table#admin-attempts {
+section#main table#admin-attempts {
  	border-collapse: collapse;
  	border: solid 1px black;
 }
@@ -155,6 +161,9 @@ header div.header-left, header div.header-right {
 footer div.footer-left, footer div.footer-right {
 	width: 100%;
 	text-align: center;
+}
+footer p {
+	margin: .5em 0;
 }
 header div.header-right {
 	text-align: center;
