--- a/views/admin.jade
+++ b/views/admin.jade
@@ -3,6 +3,7 @@ extends layout
 block content
 	section#main
 		h1=title
+		p System start: #{moment(systemStart).format("MM/DD HH:mm:ss")}
 		p The Last #{attempts.length} question attempts are shown in the table below.<br>(green=correct, red=incorrect)
 		table#admin-attempts
 			thead
@@ -11,10 +12,10 @@ block content
 					td Username
 					td Question
 					td Answer
-				tbody
-					for attempt, i in attempts
-						tr(class="answer-#{questions[i].success}")
-							td #{moment(attempt.timeStamp).format("MM/DD HH:mm")}
-							td #{attempt.userName}
-							td #{questions[i].question}
-							td(class="answer-#{questions[i].success}") #{questions[i].answer}
+			tbody
+				for attempt, i in attempts
+					tr(class="answer-#{questions[i].success}")
+						td #{moment(attempt.timeStamp).format("MM/DD HH:mm")}
+						td #{attempt.userName}
+						td #{questions[i].question}
+						td(class="answer-#{questions[i].success}") #{questions[i].answer}
