--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,7 +4,8 @@ html
 		meta(name='viewport', content='width=device-width, initial-scale=1.0')
 		title= title
 		link(rel='stylesheet', href='/stylesheets/style.css')
-		//script(src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js")
+		script(src='/javascripts/jQuery2.1.4.js')
+		script(src='/javascripts/scripts.js')
 		//script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js")
 	body
 		include header
